--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-svg": "^16.1.34",
     "sonner": "^1.5.0",
     "supabase": "^1.190.0",
     "tailwind-merge": "^2.5.2",
